--- a/docs/calm_login/calm_login.mdx
+++ b/docs/calm_login/calm_login.mdx
@@ -18,14 +18,39 @@ the specific role available for NCM Self Service
 
 The AD services for the **NTNXLAB1.local** domain. The domain is populated with the following Users and Groups.  Replace XYZ with the username and password provided by the leader of the workshop
 
-
-| Group                 | Role                   | Username(s)         |
-|-----------------------| ---------------------------------------------|
-| SSPAdmin              | Self-Service Admin     | sspXYZadmin         | 
-| SSPProjectAdmin       | Project Admin          | tenantXYZprojadmin  | 
-| SSPDeveloper          | Consumer               | tenantXYZdeveloper  | 
-| SSPBPDeveloper        | Developer              | tenantXYZBPdeveloper|
-
+<div className="table-wrap">
+  <table className="table custom-table">
+    <thead>
+      <tr>
+        <th>Group/th>
+        <th>Role</th>
+        <th>Username</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>SSPAdmin</td>
+        <td>Self-Service Admin</td>
+        <td>sspXYZadmin </td>
+      </tr>
+      <tr>
+        <td>SSPProjectAdmin</td>
+        <td>Project Admin</td>
+        <td>tenantXYZprojadmin</td>
+      </tr>
+      <tr>
+        <td>SSPDeveloper</td>
+        <td>Consumer</td>
+        <td>tenantXYZdeveloper</td>
+      </tr>
+      <tr>
+        <td>SSPBPDeveloper</td>
+        <td>Developer</td>
+        <td>tenantXYZBPdeveloper</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 ## Login Page of the Calm VM
 
