--- a/docs/ncm_marketplace2/ncm_marketplace2.mdx
+++ b/docs/ncm_marketplace2/ncm_marketplace2.mdx
@@ -4,8 +4,8 @@ title: "Marketplace"
 
 # Product Configurations:
 
-1.  Calm VM 4.1.0 on PC2024.3.1
-2.  Infrastructure cluster on AOS 7.0.5 on PC2024.3.1
+1.  Calm VM 4.2.0 on PC7.3
+2.  Infrastructure cluster on AOS 7.3 on PC7.3
 
 # Overview
 
@@ -14,6 +14,7 @@ operating system.  Nutanix Marketplace allows you to congregate infrastructure p
 
 - Nutanix AHV & ESXi 
 - Nutanix Cloud Cluster on AWS and Azure 
+- Nutanix Database
 - VMware VCenter ESXi on 3 tiers 
 - Native AWS
 - Native Azure 
