fix error in calm_login

--- a/docs/calm_login/calm_login.mdx
+++ b/docs/calm_login/calm_login.mdx
@@ -20,18 +20,18 @@ The AD services for the **NTNXLAB1.local** domain. The domain is populated with 
 
 <div className="table-wrap">
   <table className="table custom-table">
-    <th>
+    <thead>
       <tr>
         <th>Group/th>
         <th>Role</th>
         <th>Username</th>
       </tr>
-    </th>
+    </thead>
     <tbody>
       <tr>
         <td>SSPAdmin</td>
         <td>Self-Service Admin</td>
-        <td>sspXYZadmin </td>
+        <td>sspXYZadmin</td>
       </tr>
       <tr>
         <td>SSPProjectAdmin</td>
