--- a/docs/calm_login/calm_login.mdx
+++ b/docs/calm_login/calm_login.mdx
@@ -18,6 +18,7 @@ the specific role available for NCM Self Service
 
 The AD services for the **NTNXLAB1.local** domain. The domain is populated with the following Users and Groups.  Replace XYZ with the username and password provided by the leader of the workshop
 
+``` html
 <div className="table-wrap">
   <table className="table custom-table">
     <thead>
@@ -51,6 +52,7 @@ The AD services for the **NTNXLAB1.local** domain. The domain is populated with 
     </tbody>
   </table>
 </div>
+```
 
 ## Login Page of the Calm VM
 
