--- a/docs/calm_login/calm_login.mdx
+++ b/docs/calm_login/calm_login.mdx
@@ -18,12 +18,11 @@ the specific role available for NCM Self Service
 
 The AD services for the **NTNXLAB1.local** domain. The domain is populated with the following Users and Groups.  Replace XYZ with the username and password provided by the leader of the workshop
 
-``` html
 <div className="table-wrap">
   <table className="table custom-table">
     <thead>
       <tr>
-        <th>Group/th>
+        <th>Group</th>
         <th>Role</th>
         <th>Username</th>
       </tr>
@@ -52,7 +51,7 @@ The AD services for the **NTNXLAB1.local** domain. The domain is populated with 
     </tbody>
   </table>
 </div>
-```
+
 
 ## Login Page of the Calm VM
 
