--- a/docs/calm_login/calm_login.mdx
+++ b/docs/calm_login/calm_login.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Lab Login"
+title: "Lab Login for Self Service"
 ---
 
 # Product Configurations:
@@ -19,7 +19,7 @@ the specific role available for NCM Self Service
 The AD services for the **NTNXLAB1.local** domain. The domain is populated with the following Users and Groups.  Replace XYZ with the username and password provided by the leader of the workshop
 
 <div className="table-wrap">
-  <table className="table custom-table">
+  <table className="table custom-table compact">
     <thead>
       <tr>
         <th>Group</th>
@@ -53,9 +53,9 @@ The AD services for the **NTNXLAB1.local** domain. The domain is populated with 
 </div>
 
 
-## Login Page of the Calm VM
+## Login Page of the Self Service
 
- Logging into the Calm VMs is the entry point for the lab.  Please refer to the Google spreadsheet provided by the leader 
+ Logging into the Self Service is the entry point for the lab.  Please refer to the Google spreadsheet provided by the leader 
  of the lab for both the url and login credential.  All login are using domain credential unless otherwise stated.
 
 1.  Login using SSP Admin username provided in the Google spreadsheet.  An example is ssp1admin@ntnxlab1.local  
