--- a/docs/calm_login/calm_login.mdx
+++ b/docs/calm_login/calm_login.mdx
@@ -4,7 +4,7 @@ title: "Lab Login for Self Service"
 
 # Product Configurations:
 
-1.  Calm VM 4.2.0 on PC7.3
+1.  NCM Self Service VM 4.2.0 on PC7.3
 2.  Infrastructure cluster on AOS 7.3 on PC7.3
 
 ## Role Based Access in Project
@@ -58,10 +58,18 @@ The AD services for the **NTNXLAB1.local** domain. The domain is populated with 
  Logging into the Self Service is the entry point for the lab.  Please refer to the Google spreadsheet provided by the leader 
  of the lab for both the url and login credential.  All login are using domain credential unless otherwise stated.
 
-1.  Login using SSP Admin username provided in the Google spreadsheet.  An example is ssp1admin@ntnxlab1.local  
+1.  Login using SSP Admin username provided in the Google spreadsheet.  An example is ssp20admin@ntnxlab1.local  
   
   ![](images/login.png)
 
-2.  This picture is an example of successful login 
+2.  This picture is an example of successful login.  Logout
 
   ![](images/login-success.png)
+
+3.  Login using SSP Project Admin username provided in the Google spreadsheet.  An example is tenant20projadm@ntnxlab1.local
+
+  ![](images/login-proj-admin.png)
+
+4.  This picture is an example of successful login.  
+
+  ![](images/login-proj-admin-success.png)
