--- a/docs/calm_multi_vm/scaleout_app/scaleout_app.mdx
+++ b/docs/calm_multi_vm/scaleout_app/scaleout_app.mdx
@@ -4,7 +4,7 @@ title: "Scale Out Application"
 
 # Product Configurations:
 
-1.  Calm VM 4.2.0 on PC7.3
+1.  NCM Self Service VM 4.2.0 on PC7.3
 2.  Infrastructure cluster on AOS 7.3 on PC7.3
 
 ## Objectives:
