--- a/docs/calm_project/calm_project.mdx
+++ b/docs/calm_project/calm_project.mdx
@@ -4,7 +4,7 @@ title: "Project"
 
 # Product Configurations:
 
-1.  Calm VM 4.2.0 on PC7.3
+1.  NCM Self Service VM 4.2.0 on PC7.3
 2.  Infrastructure cluster on AOS 7.3 on PC7.3
 
 ## What is a Project
@@ -13,7 +13,7 @@ Project is the logical construct that allowed an administrator to assign both in
 
 # Create a Project
 
-1.  Login to the Calm VM using the admin user.
+1.  Login to the Self Service VM using the Project Admin user.
 
 2.  Click on **Hamburger Menu**.  Select **Admin Center**
 
