update calm_project and sidebars.js

--- a/docs/calm_login/calm_login.mdx
+++ b/docs/calm_login/calm_login.mdx
@@ -62,14 +62,14 @@ The AD services for the **NTNXLAB1.local** domain. The domain is populated with 
   
   ![](images/login.png)
 
-2.  This picture is an example of successful login.  Logout
+2.  This picture is an example of successful login.  
 
   ![](images/login-success.png)
 
-3.  Login using SSP Project Admin username provided in the Google spreadsheet.  An example is tenant20projadm@ntnxlab1.local
+#  Login using SSP Project Admin username provided in the Google spreadsheet.  An example is tenant20projadm@ntnxlab1.local
 
-  ![](images/login-proj-admin.png)
+# ![](images/login-proj-admin.png)
 
-4.  This picture is an example of successful login.  
+#   This picture is an example of successful login.  
 
-  ![](images/login-proj-admin-success.png)
+# ![](images/login-proj-admin-success.png)
