--- a/docs/calm_project/calm_environment.mdx
+++ b/docs/calm_project/calm_environment.mdx
@@ -47,32 +47,15 @@ marketplace blueprint.
 
     ![](images/Environment-8.png)
 
-3.  Check the **Guest Customization**.  Copy the **cloud-init** contents into the **Guest Customization**
-
-    ``` bash
-    #cloud-config
-    disable_root: False
-    ssh_enabled: True
-    ssh_pwauth: True
-    users:
-    - name: nutanix
-        passwd: @@{ROCKY 2 Credential.secret}@@
-        chpasswd: { expire: False }
-        ssh-authorized-keys:
-            - @@{ROCKY.public_key}@@
-        sudo: ['ALL=(ALL) NOPASSWD:ALL']
-
-    #cloud-config
-    fqdn: @@{name}@@.@@{domain_name}@@
-    manage_etc_hosts: true
-    hostname: @@{name}@@
-    ```
-
-4.  Expand the **DISK** section. Select the disk image as shown.
+3.  Expand the **DISK** section. Select the disk image as shown.
 
     ![](images/Environment-9.png)
+    
+4.  Leave default for the following:
 
-5.  Expand the **Network Adapter** section. Select the Network Adapter:
+    ![](images/Environment-9-2.png)
+
+5.  Expand the **Network Adapter** section. Click on + icon.  Select the Network Adapter:
     **Primary**.
 
     ![](images/Environment-10.png)
@@ -83,53 +66,15 @@ marketplace blueprint.
 
 ### Create Credential used in Marketplace Launch for Linux Marketplace Items
 
-1.  Create the credential for **ROCKY**. Fill out the following fields:
+1.  Create the credential for **RHEL**. Fill out the following fields:
 
-    -   **Credential Name** - ROCKY
+    -   **Credential Name** - RHEL
     -   **Username** - nutanix
     -   **Secret Type** - ssh private key
-    -   **Key** - Paste in your own private key, or use the following private key:
+    -   **Key** - 
 
-    ```bash
-    -----BEGIN OPENSSH PRIVATE KEY-----
-    b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAABlwAAAAdzc2gtcn
-    NhAAAAAwEAAQAAAYEA95M5IUFiUytmJYApwMy4DEYvfO3oadrR2vSgcZ5OkMkgQ1ZLJlYi
-    cO4YCRwkaToOk5zlQ/ttpSH7P2DDw9aIoot1B0Q066GKlfKdhBJk3Un0Jg+b5ITLYaaSL+
-    Yil/Gol+Q+4MZP62HUqyAfmJqN5igf+GQ8dtsbwakTt9yaBjsGVucM7aXo3SIeZODPlze+
-    qpX8UGD5gvrjByYjxDBXbZtQ7OEKuqO8Eemw+iaKqmtyZN1kFxSoS//NE1Kohjr1tbqiyQ
-    FMM+4q7sOFuIcuMHrA3I/zvTGGLLX9a54Db9xGPo6c6zJITN5B7CrLAM/w2XLdNpMxJKVY
-    c/orH2vzLdZOG4AnIFn0oXZNSjqM4W3XP0/ackTHsM8gIH9ptcgND5LX3eyul20U/X4fDZ
-    nNygfRpxlpebsV4/yrJt5PUvxmfFwIL48qs7IHyLVoRXZ8RDfqxmAyGl38rQQhNEMU6ft8
-    UygcsuhDgxOxclHMBWHQV8aT3+M0WOnWrlcjLsUjAAAFmPWcK1r1nCtaAAAAB3NzaC1yc2
-    EAAAGBAPeTOSFBYlMrZiWAKcDMuAxGL3zt6Gna0dr0oHGeTpDJIENWSyZWInDuGAkcJGk6
-    DpOc5UP7baUh+z9gw8PWiKKLdQdENOuhipXynYQSZN1J9CYPm+SEy2Gmki/mIpfxqJfkPu
-    DGT+th1KsgH5iajeYoH/hkPHbbG8GpE7fcmgY7BlbnDO2l6N0iHmTgz5c3vqqV/FBg+YL6
-    4wcmI8QwV22bUOzhCrqjvBHpsPomiqprcmTdZBcUqEv/zRNSqIY69bW6oskBTDPuKu7Dhb
-    iHLjB6wNyP870xhiy1/WueA2/cRj6OnOsySEzeQewqywDP8Nly3TaTMSSlWHP6Kx9r8y3W
-    ThuAJyBZ9KF2TUo6jOFt1z9P2nJEx7DPICB/abXIDQ+S193srpdtFP1+Hw2ZzcoH0acZaX
-    m7FeP8qybeT1L8ZnxcCC+PKrOyB8i1aEV2fEQ36sZgMhpd/K0EITRDFOn7fFMoHLLoQ4MT
-    sXJRzAVh0FfGk9/jNFjp1q5XIy7FIwAAAAMBAAEAAAGABzdSQi71DhP3QXFHqtgIJriUIV
-    Zr4JTYIXoqliwQuJoQuggDXyp41hdkzBjkrfDI6PuLPJzQ/R2xzY7lHwCJA7fbmAZE/XfO
-    j1wsVnXwOEKzx5SCLRWfOfbrvJvRQCs8P0UiNFVxJC9McvFO05kVFHNehgr9U1L6nQ/v6N
-    arBumbX8Sk/i5IlcstAcK5J/xpLvD5yfLWOdHnPbMIGtlP3VfIF0dygRxNEa1zJVP+HkVf
-    VJEoQnqI4GbIr4O2MRCMG8epCz85RY9jnQUH5cQnCGYbkOj9LZEx22BqqUaASYstnGxOz8
-    6exv62f5oE5AMVW3CdXPd6Asw8jgIqNiVnArIzfUOmfQvCgsrXD23tu69puEzny+Q5Z9ST
-    iVAB0hESbXnKW5DxGz0lYYdVEE9CBFuXz9U9F6Uv3Hx6a1l+wOJRffZolVnpr+leoFBKUe
-    RgXkZ7XTLmQFJRQBglKuNnpYryaE2Lxh9hgf6QSho/grtuPCqlVqLFOnP5M6gR91w5AAAA
-    wEoz0H311sMZ+G7F1bkY7PmpDAfSUTM3uH8YjBj227YVH9m8hxZGcEAnUs9kgtuJqLRyhE
-    znivgfyj/kPmtSm0lYMtS99RHGUHe41nS7OVlpg/fhQASnLJnUwtw4M5GyJl2z47w5bCTF
-    q37/8xd3cI3JOeggGewaV8L75Bvk9mGpMRPOq5v+Z/UGONVur67+313fGVcQFXMu3+freO
-    5PG9VLXdoEoCVAyGfL1NcYX5CSIf9kJrJXxt/FMrQ9kFZmOgAAAMEA+9MqYBDHhf/MRDuf
-    +MktKN1UbP8mfbMIpMMwvoiG/4XezIVlBT2QxNloNSufF4g9vA5TLiTg73eaSlAAAnTLKR
-    eAmxqerrgVUj2GdGqv2TEb4ebVpAPW0MN/B+5SX7ho0d6sqTOcOhwVNJCD5SWosVc4lxxX
-    Ou/dLz5gV3GRTawx4wNCeYBK4eyGQcAi7fm4oAC+fgtBcwWLZ3gl8UOJ+cLJd7TrJG/7Iw
-    wH8FYJb6GCZB/AGXIGZv+HCw3lCL4bAAAAwQD7rgUjuPTXgKUCHEFPMzWJw6lG3+02hcGt
-    qoV1fkTYQLEct3wY4basak+xeJTye5nF5LRSxieLexSZZTdaZY4lHFJCTLJOqLf6bbRGrx
-    gA1lFbqSlN8wmfYowUcdj193POjksN1lJVR6ZaeFbFgapeq4BuuMfhutn7KWcyarpQLjhf
-    CzfxyDRIaBxR/CUunWGnuFOyivIeDj7E1ouwR2PU7VI1H2xM1DXF67D2MJN7GXB6B1Pz6q
-    BHZAP32i8l5ZkAAAAdbnV0YW5peEBsb2NhbGhvc3QubG9jYWxkb21haW4BAgMEBQY=
-    -----END OPENSSH PRIVATE KEY-----
-    ```
+   <Link href="https://www.dropbox.com/scl/fi/992k2b751ovmjvifo20mk/id_rsa?rlkey=brqmf3nrg7q8elrw8ecb3sw8h&dl=0" target="_blank" rel="noopener">Download to use the following private key:</Link>
+
 
     ![](images/Environment-11.png)
 
@@ -139,9 +84,9 @@ marketplace blueprint.
 
     ![](images/Environment-12.png)
 
-4.  Create the credential for **ROCKY 2 Credential**. Fill out the following fields:
+4.  Create the credential for **RHEL 2 Credential**. Fill out the following fields:
 
-    -   **Credential Name** - ROCKY 2 Credential
+    -   **Credential Name** - RHEL 2 Credential
     -   **Username** - nutanix
     -   **Secret Type** - Password
     -   **Password** - Request from the trainer
