--- a/docs/calm_project/snapshot_policy_project.mdx
+++ b/docs/calm_project/snapshot_policy_project.mdx
@@ -9,9 +9,10 @@ title: "Snapshot Policy in Project"
 
 # Snapshot Policy
 
-The objective of the snapshot policy allows the Tenant Project Administrator to clean up the snapshots taken by the
-tenant developer after the expiry period.  The Tenant Project Administrator may choose to configure the snapshot policy 
-to take the snapshot locally or replicate the snapshot to a DR site for business critical Applications
+The objective of the snapshot policy allows the Tenant Project Administrator to clean up the snapshots 
+taken by the tenant developer after the expiry period automatically.  The Tenant Project Administrator 
+may choose to configure the snapshot policy to take the snapshot locally or replicate the snapshot to 
+a DR site for business critical Applications.  This lab focuses on local snapshot only.
 
 # Configure Snapshot Policy in Project
 
