--- a/docs/calm_project/snapshot_policy_project.mdx
+++ b/docs/calm_project/snapshot_policy_project.mdx
@@ -7,6 +7,10 @@ title: "Snapshot Policy in Project"
 1.  NCM Self Service VM 4.2.0 on PC7.3
 2.  Infrastructure cluster on AOS 7.3 on PC7.3
 
+# Quota Policy
+
+The objective of the 
+
 # Snapshot Policy
 
 The objective of the snapshot policy allows the Tenant Project Administrator to clean up the snapshots 
@@ -14,7 +18,7 @@ taken by the tenant developer after the expiry period automatically.  The Tenant
 may choose to configure the snapshot policy to take the snapshot locally or replicate the snapshot to 
 a DR site for business critical Applications.  This lab focuses on local snapshot only.
 
-# Configure Snapshot Policy in Project
+## Configure Snapshot Policy in Project
 
 1.  Click on **Policies**
 
