change pictures for snapshot policy

--- a/docs/calm_project/calm_quota.mdx
+++ b/docs/calm_project/calm_quota.mdx
@@ -9,7 +9,7 @@ Nutanix provides 2 level of quota to provide granular control
 
 ## Configure Account/Prism Central Quota in Project
 
-1.  Configure this section to configure the quota allocated to this project.
+1.  Configure this section to configure the Account/Prism Central quota allocated to this project.
 
 2.  Check the **Quotas**.  Fill in the following:
 
