--- a/docs/what_is_calm/runbook.mdx
+++ b/docs/what_is_calm/runbook.mdx
@@ -2,6 +2,8 @@
 title: Runbook
 ---
 
+import Link from '@docusaurus/Link';
+
 # Product configurations
 
 1.  Calm VM 4.2.0 on PC7.3
@@ -20,8 +22,8 @@ executed on a regular basis.
 
 Some of the use cases are 
 
-1.  Nutanix Database Service (NDB) integration with Self Service Runbook
-https://portal.nutanix.com/page/documents/details?targetId=Self-Service-Admin-Operations-Guide-v3_8_1:nuc-app-mgmt-ndb-with-runbooks-c.html
+1.  <Link href="https://portal.nutanix.com/page/documents/details?targetId=Self-Service-Admin-Operations-Guide-v4_2_0:nuc-app-mgmt-ndb-with-runbooks-c.html" target="_blank" rel="noopener">Nutanix Database Service (NDB) integration with Self Service Runbook</Link>
 
-2.  Service Provider Pack (Multi-Tenanted capabilities for Runbook)
-https://portal.nutanix.com/page/documents/details?targetId=Self-Service-Admin-Operations-Guide-v3_8_1:nuc-app-mgmt-multi-tenant-capability-sp-c.html
+
+2.  <Link href="https://portal.nutanix.com/page/documents/details?targetId=Self-Service-Admin-Operations-Guide-v4_2_0:nuc-app-mgmt-multi-tenant-capability-sp-c.html" target="_blank" rel="noopener">Service Provider Pack (Multi-Tenanted capabilities for Runbook)</Link>
+
