--- a/docs/ncm_marketplace2/ncm_publish_blueprint.mdx
+++ b/docs/ncm_marketplace2/ncm_publish_blueprint.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Publish blueprint to Marketplace"
+title: "Publish Wordpress blueprint to Marketplace"
 ---
 
 # Product Configurations:
