--- a/docs/ncm_marketplace2/ncm_consume_wordpress.mdx
+++ b/docs/ncm_marketplace2/ncm_consume_wordpress.mdx
@@ -9,19 +9,21 @@ title: "Consume Wordpress Marketplace Item"
 
 # Consume Wordpress Marketplace item
 
-1.  Logout of Self Service VM.  Login as tenant**XYZ**developer@ntnxlab1.local user.  Replace XYZ with your assigned no in the Google spreadsheet
+1.  Logout of Self Service VM.  Login as tenant**XYZ**developer@ntnxlab1.local user.  Replace XYZ with your assigned no in the Google spreadsheet.
 
-    ![](images/marketplace-launch-1.png)
+2.  The tenant developer had login successfully
+
+    ![](images/developer-home-screen.png)
 
 2.  Click on hamburger menu.  Click on **Self Service**
 
     ![](images/appswitcher-self-service.png)
 
-3.  Click on **Marketplace**
+3.  Click on **Marketplace** on the left hand pane.
 
-    ![](images/marketplace-launch-3.png)
-
-4.  Click on **Wordpress**
+4.  Both **Install AD and DNS** and **NKP** blueprints are not published to this project.  It is to
+ illustrate it is possible to assign multiple marketplace Items to the project.  Click on **Get** 
+ for **Wordpress**.  
 
     ![](images/marketplace-wordpress.png)
 
@@ -69,6 +71,20 @@ title: "Consume Wordpress Marketplace Item"
 ## Verification
 
 1.  Click on **Services**
+
+    ![](images/marketplace-wp-1.png)
+
+2.  Click on **HAProxy**
+
+    ![](images/marketplace-wp-1.png)
+
+3.  Observe the service on the right side of the screen.  Click on **IP Address**
+
+    ![](images/marketplace-wp-3.png)
+
+4.  Open a new browser tab.  Put in the **IP Address**
+
+    ![](images/marketplace-wp-4.png)
 
 
 
