--- a/docs/ncm_marketplace2/ncm_publish_iaas_blueprint.mdx
+++ b/docs/ncm_marketplace2/ncm_publish_iaas_blueprint.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Publish Wordpress blueprint to Marketplace"
+title: "Publish RedHat IaaS blueprint to Marketplace"
 ---
 
 # Product Configurations:
@@ -21,7 +21,7 @@ The IaaS blueprint for both Windows Server 2022 and RedHat Enterprise Linux 10 a
 
     ![](images/marketplace-1.png)
 
-4. Filter by **Wordpress**
+4. Filter by **rhel 10**
 
     ![](images/marketplace-2.png)
 
@@ -37,10 +37,6 @@ The IaaS blueprint for both Windows Server 2022 and RedHat Enterprise Linux 10 a
 
     ![](images/marketplace-4-2-iaas.png)
 
-8.  This picture shows the RHEL 10 application had been published to the marketplace.  Ignore 
-the next step
-
-    ![](images/marketplace-6.png)
 
 
 
