--- a/docs/ncm_marketplace2/ncm_publish_iaas_blueprint.mdx
+++ b/docs/ncm_marketplace2/ncm_publish_iaas_blueprint.mdx
@@ -21,11 +21,7 @@ The IaaS blueprint for both Windows Server 2022 and RedHat Enterprise Linux 10 a
 
     ![](images/marketplace-1.png)
 
-4. Filter by **rhel 10**
-
-    ![](images/marketplace-2.png)
-
-5.  Check on **rhel 10**.  The detail popped up on the right.  Scroll down.
+4. Filter by **rhel 10**.  Check on **rhel 10**.  
 
     ![](images/marketplace-3-iaas.png)
 
