--- a/docs/ncm_marketplace2/ncm_consume_wordpress.mdx
+++ b/docs/ncm_marketplace2/ncm_consume_wordpress.mdx
@@ -7,6 +7,13 @@ title: "Consume Wordpress Marketplace Item"
 1.  Calm VM 4.2.0 on PC7.3
 2.  Infrastructure cluster on AOS 7.3 on PC7.3
 
+# Overview
+
+The objective is to illustrate a tenant developer requesting for resources like Wordpress from the 
+market place.  The wordpress application is accesible by the members within the tenant project only.  It 
+illustrates the RBAC of the project to restrict access.  The tenant does not have access to the 
+Prism Central and access the VM through the **Open Terminal** only
+
 # Consume Wordpress Marketplace item
 
 1.  Logout of Self Service VM.  Login as tenant**XYZ**developer@ntnxlab1.local user.  Replace XYZ with your assigned no in the Google spreadsheet.
